test/expected/explain_c-02.out
explain const i
        ^
9: error: implicit "int" is illegal in C99 and later
